<resources>
    <string name="AI_guided_practice">SST/SWT/WE/WFD主观题新增打分，机器智能带练</string>
    <string name="Active">立即开通</string>
    <string name="Activity_introduction">活动介绍</string>
    <string name="Add_a_title">为你的新收藏添加一个标题</string>
    <string name="Add_alpaca_customer">添加羊驼学习顾问，立即获取</string>
    <string name="Add_memories">补充回忆</string>
    <string name="Add_my_memories">补充我的考场回忆...</string>
    <string name="Add_notes">补充说明</string>
    <string name="Add_related_topics">添加关联题目</string>
    <string name="Add_the_WeCha">添加课程顾问微信号：</string>
    <string name="Albums">相册</string>
    <string name="All_Categories">全部分类</string>
    <string name="All_courses">全部 ></string>
    <string name="All_courses2">全部课程</string>
    <string name="Alpaca_PTE">羊驼日语</string>
    <string name="Alpaca_VIP">黄金VIP</string>
    <string name="Alpaca_course">羊驼课堂</string>
    <string name="Answer">答案</string>
    <string name="Answer_the_Question">答题</string>
    <string name="Answer_the_Question2">答题</string>
    <string name="Article_type">文章类型</string>
    <string name="Backward">倒序</string>
    <string name="Bar">柱图</string>
    <string name="Cancel">取消</string>
    <string name="Change_nickname">修改昵称</string>
    <string name="Check">发音点评</string>
    <string name="Choice">选题</string>
    <string name="Choose_exam_room">选择考场</string>
    <string name="Choose_topic_tags">选择话题标签</string>
    <string name="City">城市</string>
    <string name="Clear_all_read_marks">是否清除全部已阅?</string>
    <string name="Clear_success">清除成功</string>
    <string name="Click_the_button">点击下方按钮</string>
    <string name="Click_too_often">点击太过频繁，请3s后重试</string>
    <string name="Clocked_in_today">已完成今日打卡</string>
    <string name="Close">关闭</string>
    <string name="Close2">收起></string>
    <string name="Code">验证码</string>
    <string name="Collect_words">标记生词</string>
    <string name="Collected"> 已收藏</string>
    <string name="Collected2">已收藏</string>
    <string name="Collection">收藏</string>
    <string name="Collection_of_success">收藏成功！</string>
    <string name="Comb">混合图</string>
    <string name="Comment">留言</string>
    <string name="Comment_my_dynamics">点赞了我的动态</string>
    <string name="Comment_pronunciation">去点评我的发音</string>
    <string name="Complete_and_save">完成并保存</string>
    <string name="Complete_customization">完成自定义</string>
    <string name="Confirm">确定</string>
    <string name="Confirm2">确认</string>
    <string name="Confirm_to_leave">确认离开</string>
    <string name="Confirmed">确认考过</string>
    <string name="Confirmed2">已确认</string>
    <string name="Content">内容</string>
    <string name="Content_preview">内容预览</string>
    <string name="Continue">继续</string>
    <string name="Continue_to_practice">继续练习</string>
    <string name="Continue_to_share">继续分享</string>
    <string name="Copy"> 复制</string>
    <string name="Copy_Alpaca_Password">复制羊驼口令</string>
    <string name="Copy_Invitation_Code">复制邀请码</string>
    <string name="Copy_WeChat">复制微信号添加，免费体验VIP专属服务噢~</string>
    <string name="Copy_and_Punch_WeChat">复制并打开微信</string>
    <string name="Copy_link">复制链接</string>
    <string name="Copy_the_Invitation_Code">邀请码已复制，快去粘贴吧！</string>
    <string name="Copy_the_password">羊驼口令已复制，快去粘贴吧！</string>
    <string name="Country">国家</string>
    <string name="Custom_plan">自定义计划</string>
    <string name="Custom_reload">自定义重新加载</string>
    <string name="Daily_preparation_time">每日备考时长</string>
    <string name="Daily_punch">每日打卡</string>
    <string name="Data_upload_failed">数据上传失败，请重试</string>
    <string name="Date">日期</string>
    <string name="Day">日</string>
    <string name="Default">默认</string>
    <string name="Delete">删除</string>
    <string name="Delete_the_collection">删除收藏</string>
    <string name="Description_of_privileges">特权说明：</string>
    <string name="Dont_remind">不再提示</string>
    <string name="Dynamic_topic">动态话题</string>
    <string name="Edit">编辑</string>
    <string name="English_Foundation">英语基础</string>
    <string name="Evaluation_Report">测评报告</string>
    <string name="Events">活动须知</string>
    <string name="Exam_preparation_information">备考干货</string>
    <string name="Exam_reference_guide">备考指南</string>
    <string name="Excellent">读的很棒！</string>
    <string name="Expand">展开</string>
    <string name="Explain_the_Answer">解答</string>
    <string name="Favorite">收藏夹</string>
    <string name="Features">课程特色</string>
    <string name="Feedback">意见反馈</string>
    <string name="Feedback2">反馈问题</string>
    <string name="Feedback3">使用反馈</string>
    <string name="Fill_in_the_Code">填写邀请码</string>
    <string name="Flow">流程图</string>
    <string name="Fold">收起</string>
    <string name="Font_Size">字体大小</string>
    <string name="Forward">顺序</string>
    <string name="Free_gift_for_you">即可免费领取</string>
    <string name="Free_template">免费模版</string>
    <string name="Friday">星期五</string>
    <string name="Gap">间隔</string>
    <string name="Get_code">获取验证码</string>
    <string name="Get_planning_guidance">获取备考计划指导</string>
    <string name="Good_Memory_as_Bad_Written">好记性不如烂笔头</string>
    <string name="Headline">标题</string>
    <string name="Hidden2">隐藏释义</string>
    <string name="Hide">隐藏</string>
    <string name="High_School">高中</string>
    <string name="Hot_Topic">热门话题</string>
    <string name="IETS7PTE65">雅思7.0/PTE65</string>
    <string name="Imitation_Practice">模仿练习</string>
    <string name="Immigration">移民</string>
    <string name="In_a_moment">再体验一会</string>
    <string name="Infinite_Powerful">无限体力</string>
    <string name="Install_WeChat_first">请先安装微信</string>
    <string name="Instruction">使用方法：</string>
    <string name="Intensive_Listening">全文精听</string>
    <string name="Intensive_listening">精听</string>
    <string name="Interact">互动</string>
    <string name="Interface">界面</string>
    <string name="Introduction_and_details">介绍/使用细则</string>
    <string name="Invitation_Code">邀请码：</string>
    <string name="Invitation_code_activated">邀请码激活成功</string>
    <string name="Invite_Benefits">邀请有礼</string>
    <string name="Invite_Friends">邀请好友注册</string>
    <string name="It_is_past">驼龄已超过3日</string>
    <string name="Language_skills">语言能力</string>
    <string name="Languages">多语言</string>
    <string name="Last_test_score">最近一次考试成绩</string>
    <string name="Latest_dynamic">全新动态</string>
    <string name="Learning_objectives">学习目的</string>
    <string name="Learning_portrait">学习画像</string>
    <string name="Learning_to_remind">学习提醒</string>
    <string name="Line">线图</string>
    <string name="Listening_Tips">Tips:双击句子收藏，长按单词进行查询</string>
    <string name="Log_Out_hint">是否退出登录？</string>
    <string name="Log_in">加入备考团</string>
    <string name="Log_in2">登录中...</string>
    <string name="Log_out">退出登录</string>
    <string name="Machine_modification">机经修订</string>
    <string name="Mandatory">必填</string>
    <string name="Map">地图</string>
    <string name="Materials">资料圈</string>
    <string name="Meaning">释义</string>
    <string name="Medium">中</string>
    <string name="Membership2">VIP特权</string>
    <string name="Message_Center">消息中心</string>
    <string name="Mine">我的录音</string>
    <string name="Mode">模式</string>
    <string name="Modify_and_save">修改并保存</string>
    <string name="Moments">朋友圈</string>
    <string name="Monday">星期一</string>
    <string name="Monday_to_Friday">周一至周五</string>
    <string name="Month">月</string>
    <string name="More">更多</string>
    <string name="More2">更多></string>
    <string name="More3">展开更多</string>
    <string name="More_than">已超过</string>
    <string name="My_code">我的邀请码</string>
    <string name="My_voice">发表我的见解</string>
    <string name="My_voice2">发表我的见解...</string>
    <string name="New_things_sharing">分享点新鲜事，抱团备考PTE</string>
    <string name="Next">下一步</string>
    <string name="Nickname">昵称</string>
    <string name="No">没有</string>
    <string name="No_data_yet">暂时还没有数据</string>
    <string name="No_message">暂无留言</string>
    <string name="No_related_exercises_yet">暂时还没有关联的练习</string>
    <string name="No_sound_detected">未检测到声音，请重新尝试录制</string>
    <string name="Official_Accounts">公众号</string>
    <string name="Official_Accounts2">微信公众号</string>
    <string name="Official_Accounts_text1">已复制公众号账号，前往微信搜索添加即可。</string>
    <string name="Offline_courses">线下课程</string>
    <string name="Online_courses">线上课程</string>
    <string name="Open_learning_remind">开启学习提醒</string>
    <string name="Open_learning_text2">想要获取全新考场回忆？</string>
    <string name="Open_learning_text3">开启每日提醒，实时掌握全新新题！</string>
    <string name="Open_learning_text4">马上开启</string>
    <string name="Open_member">开通会员，福利多多</string>
    <string name="Open_vvip">开通课程会员，福利多多</string>
    <string name="Optional">选填</string>
    <string name="Other_logins">其他方式登录</string>
    <string name="Others">非常规图</string>
    <string name="Others_Confirmed">战友回忆</string>
    <string name="Pie">饼图</string>
    <string name="Planned_test_date">计划考试日期</string>
    <string name="Practice2">真题练习</string>
    <string name="Practice_list">练习榜</string>
    <string name="Preparation_Plan">备考计划</string>
    <string name="Preparation_Plan2">我的备考计划</string>
    <string name="Press_exit_again">再按一次退出程序</string>
    <string name="Privileges">特权中心</string>
    <string name="Profile">个人中心</string>
    <string name="Profile_Picture">修改头像</string>
    <string name="Public_class">公开课</string>
    <string name="Public_number_copy">公众号复制成功，可以去添加了</string>
    <string name="QB">机经</string>
    <string name="QB2">真题回忆</string>
    <string name="QB_crusher">机经粉碎机</string>
    <string name="QB_list">机经榜</string>
    <string name="Ratings_Reviews">给个好评</string>
    <string name="Recall_content">回忆内容</string>
    <string name="Recall_question">按题型回忆</string>
    <string name="Recall_the_content">详细回忆下该题型内容......</string>
    <string name="Recall_the_question_bank_guide">回忆题库指南</string>
    <string name="Recent_hot_topics">近期热门话题</string>
    <string name="Recommended_successfully">已成功推荐</string>
    <string name="Record">记录</string>
    <string name="Record_hint">请点击录音按钮开始录音</string>
    <string name="Recording_hint">请点击录音按钮开始录音</string>
    <string name="Reply">回复</string>
    <string name="Reply_me">回复我：</string>
    <string name="Resend">再次发送</string>
    <string name="Reset_every_morning">每日凌晨重置</string>
    <string name="Return">返回</string>
    <string name="Saturday">星期六</string>
    <string name="Save_and_exist">暂时离开</string>
    <string name="Save_the_editor">将此次编辑保留？</string>
    <string name="Scoring_Mode">评分模式</string>
    <string name="Scoring_System">"培生同芯系统，智能AI口语测评
MAX无限体力，想用就用"</string>
    <string name="Search">搜索</string>
    <string name="Search_for_Test_Memories">搜索考场回忆</string>
    <string name="Select">共选择</string>
    <string name="Select_Country">请先选择国家</string>
    <string name="Select_all">全选</string>
    <string name="Select_city">请先选择城市</string>
    <string name="Select_country">选择国家</string>
    <string name="Select_date">请选择日期</string>
    <string name="Select_exam_date">请选择考试日期</string>
    <string name="Select_favorites">选择收藏夹:</string>
    <string name="Select_listening_following">选择精听/跟读</string>
    <string name="Select_the_label">选择标签</string>
    <string name="Selection_performance">精选动态</string>
    <string name="Share">晒一晒</string>
    <string name="Share2">分享</string>
    <string name="Share_APP">推荐给朋友</string>
    <string name="Share_success">分享成功</string>
    <string name="Single">单句</string>
    <string name="Small">小</string>
    <string name="Speech_evaluation_guidance">语音评测指导</string>
    <string name="Speed">速率</string>
    <string name="Start_Learning">开始学习</string>
    <string name="Step1">Step 1 有的放失，明确备考目的</string>
    <string name="Total">总分</string>
    <string name="all_photo">All Photo</string>
    <string name="gallery">Gallery</string>
    <string name="hearing">听力</string>
    <string name="oral">口语</string>
    <string name="read">阅读</string>
    <string name="waiting">Please wait…</string>
    <string name="written">写作</string>
</resources>