<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_width="fill_parent" android:layout_height="@dimen/pickerview_topbar_height" layout="@layout/include_pickerview_topbar" />
    <LinearLayout android:orientation="horizontal" android:id="@id/options" android:background="@android:color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/options_tv1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/Total" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/options_tv2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/oral" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/options_tv3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/written" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/options_tv4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/read" android:layout_weight="1.0" />
        <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/options_tv5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/hearing" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/optionspicker" android:background="@android:color/white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.contrarywind.view.WheelView android:id="@id/options1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.contrarywind.view.WheelView android:id="@id/options2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.contrarywind.view.WheelView android:id="@id/options3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.contrarywind.view.WheelView android:id="@id/options4" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <com.contrarywind.view.WheelView android:id="@id/options5" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>