<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fab="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/titlebar" android:layout_width="fill_parent" android:layout_height="@dimen/gf_title_bar_height">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/iv_back" android:layout_width="@dimen/gf_title_bar_height" android:layout_height="@dimen/gf_title_bar_height" android:src="@drawable/ic_gf_back" android:scaleType="centerInside" android:layout_alignParentLeft="true" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/iv_back" android:layout_centerVertical="true">
            <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gallery" android:layout_weight="1.0" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/tv_sub_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/all_photo" android:layout_weight="1.0" />
        </LinearLayout>
        <ImageView android:id="@id/iv_folder_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginBottom="-2.5dip" android:src="@drawable/ic_gf_triangle_arrow" android:layout_toRightOf="@id/ll_title" android:layout_centerVertical="true" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <ImageView android:id="@id/iv_clear" android:padding="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gf_clear" android:scaleType="centerInside" />
            <ImageView android:id="@id/iv_preview" android:padding="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gf_preview" android:scaleType="centerInside" />
            <ImageView android:id="@id/iv_take_photo" android:padding="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gf_camera" android:scaleType="centerInside" />
            <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/tv_choose_count" android:padding="6.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="9.0dip" />
        </LinearLayout>
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titlebar">
        <GridView android:id="@id/gv_photo_list" android:fadingEdge="none" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent" android:horizontalSpacing="2.0dip" android:verticalSpacing="2.0dip" android:numColumns="3" />
        <TextView android:textSize="16.0sp" android:textColor="@android:color/black" android:layout_gravity="center" android:id="@id/tv_empty_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/waiting" />
    </FrameLayout>
    <cn.finalteam.galleryfinal.widget.FloatingActionButton android:id="@id/fab_ok" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" fab:fabIcon="@drawable/ic_gf_done" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_folder_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/gf_title_bar_height">
        <ListView android:id="@id/lv_folder_list" android:background="#e6000000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent" android:divider="#ffd2d2d7" android:dividerHeight="0.5dip" android:backgroundTint="@android:color/white" />
    </LinearLayout>
</RelativeLayout>