<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rl_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.client.ytkorean.module_experience.widgets.NormalGSYVideoPlayer android:id="@id/video_player" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="centerCrop" />
        <ImageView android:id="@id/iv_ad" android:visibility="gone" android:layout_width="200.0dip" android:layout_height="75.0dip" android:layout_marginBottom="20.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rl_title">
        <ImageView android:id="@id/iv_self_ad" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:src="@drawable/baner_test" android:scaleType="fitCenter" android:minHeight="70.0dip" android:layout_toLeftOf="@id/rl_menu" />
        <FrameLayout android:id="@id/rl_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff0080ff" android:gravity="center" android:id="@id/tv_self_ask" android:paddingLeft="35.0dip" android:paddingRight="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="咨询" android:drawableLeft="@drawable/ic_zixun_0515" android:drawablePadding="15.0dip" />
            <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ffff2a00" android:gravity="center" android:id="@id/tv_self_buy" android:paddingLeft="35.0dip" android:paddingRight="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dip" android:text="购买" android:drawableLeft="@drawable/ic_buy2_0515" android:drawablePadding="15.0dip" />
        </FrameLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:gravity="center_vertical" android:id="@id/ll_title" android:paddingTop="30.0dip" android:paddingRight="6.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/iv_cancel" android:paddingLeft="15.0dip" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_out_0515" android:scaleType="center" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:drawablePadding="10.0dip" />
            <ImageView android:layout_gravity="center|right" android:id="@id/iv_share" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:src="@drawable/ic_share_0515" />
        </FrameLayout>
        <com.client.ytkorean.module_experience.widgets.StickyNestedScrollLayout android:id="@id/mStickyNestedScrollLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:navViewId="@id/mTabLayout" app:scrollViewId="@id/mRecycle" app:topViewId="@id/mTopView">
            <View android:id="@id/mTopView" android:layout_width="fill_parent" android:layout_height="230.0dip" />
            <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/mTabLayout" android:background="#fff0f4fa" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="41.0dip">
                <RadioButton android:textSize="14.0sp" android:textColor="@color/selector_self_tab_color" android:ellipsize="end" android:gravity="center" android:id="@id/filter_btn1" android:background="@drawable/selector_self_tab_bg" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:checked="true" android:button="@null" android:text="全部" android:maxLines="1" android:layout_weight="1.0" />
                <RadioButton android:textSize="14.0sp" android:textColor="@color/selector_self_tab_color" android:ellipsize="end" android:gravity="center" android:id="@id/filter_btn3" android:background="@drawable/selector_self_tab_bg" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:button="@null" android:text="@string/hearing" android:maxLines="1" android:layout_weight="1.0" />
                <RadioButton android:textSize="14.0sp" android:textColor="@color/selector_self_tab_color" android:ellipsize="end" android:gravity="center" android:id="@id/filter_btn2" android:background="@drawable/selector_self_tab_bg" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:button="@null" android:text="@string/oral" android:maxLines="1" android:layout_weight="1.0" />
                <RadioButton android:textSize="14.0sp" android:textColor="@color/selector_self_tab_color" android:ellipsize="end" android:gravity="center" android:id="@id/filter_btn5" android:background="@drawable/selector_self_tab_bg" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:button="@null" android:text="@string/read" android:maxLines="1" android:layout_weight="1.0" />
                <RadioButton android:textSize="14.0sp" android:textColor="@color/selector_self_tab_color" android:ellipsize="end" android:gravity="center" android:id="@id/filter_btn4" android:background="@drawable/selector_self_tab_bg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:button="@null" android:text="@string/written" android:maxLines="1" android:layout_weight="1.0" />
            </RadioGroup>
            <RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <androidx.recyclerview.widget.RecyclerView android:id="@id/mRecycle" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <com.client.ytkorean.module_experience.widgets.CustomWarpLinearLayout android:id="@id/pop22_rv" android:background="#ffffffff" android:paddingLeft="13.0dip" android:paddingTop="1.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </RelativeLayout>
        </com.client.ytkorean.module_experience.widgets.StickyNestedScrollLayout>
    </LinearLayout>
</RelativeLayout>